--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,8 @@
 $color: (
     TrueBlack: #000000,
-    TrueWhite: #FFFFFF
+    TrueWhite: #FFFFFF,
+    HotPink: #F09,
+    OffBlack: #161A1D
 );
 
 $font-base: 16; // px
