--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -3,6 +3,10 @@
 @import './variables';
 @import './typography';
 
+html {
+    background-color: color(OffBlack);
+}
+
 body {
     height: 100%;
     width: 100%;
